--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
                  class="profile-pic">
 
             <div class="bio-text">
-                <p>Jeffrey Meli joined New York University Stern School of Business as a Clinical Professor of Finance in January 2025.</p>
-                <p>Meli’s research interests include the corporate bond market, liquidity, financial intermediation, and financial regulation.</p>
-                <p>Before joining NYU Stern, Meli spent nearly 25 years working in the private sector, originally as a research analyst covering the corporate bond and structured credit markets. He spent ten years as the global head of research at Barclays, where he was a member of the investment bank management team. He launched the Barclays research data science platform, which integrated alternative data and modern data techniques into investment research, and transformed the firm’s approach to content monetization. He also founded and hosted the popular Flip Side podcast, debating current issues affecting financial markets.</p>
-                <p>He received his AB in Mathematics from Princeton University and his PhD in Finance from the University of Chicago Booth School of Business.</p>
+                <p>After finishing my Ph.D. at the University of Chicago, I spent 25 years in the private sector, starting as a research analyst covering structured credit at J.P. Morgan and Deutsche Bank. In 2005 I moved to Barclays, where I had a number of leadership positions, including a decade as the Global Head of Research.</p>
+                <p>In my time at Barclays I focused on strengthening both the research business and the research product. I modernized the department's approach to content monetization and enhanced our use of client and readership analytics to improve engagement. I expanded the tools available to analysts to write more differentiated research, including launching the Research Data Science initiative, which integrated alternative data and modern analytical techniques into investment research. I founded and hosted the popular Flip Side podcast, where I debated issues affecting financial markets with other Barclays analysts, and the occasional external guest. As a member of the Investment Bank Management Team, I helped formulate and execute the overall strategy of the IB. Throughout my tenure, I remained an active researcher, focused on the liquidity and structure of the corporate bond market and the impact of financial regulation on intermediation and market functioning.</p>
+                <p>I retired from Barclays in 2024, after ten enjoyable years leading the research department, intending to spend more time on my own projects. I joined the Stern School of Business as a Clinical Professor of Finance in January 2025, where I apply my private sector experience to both teaching and research. My courses are geared towards helping students apply concepts from finance, econometrics, accounting, and economics to practical problems faced by investors and analysts. My finance research is focused on liquidity, regulation, and intermediation. I also work on broader economics and policy issues such as the effect of various labor market interventions on wages and hiring.</p>
             </div>
         </div>
     </section>
@@ -75,3 +74,4 @@
 
 </body>
 </html>
+
